[package]
name = "tfire"
version = "0.1.0"
edition = "2021"
repository = "https://gitlab.com/Jaco-Minnaar/tfire"
homepage = "https://gitlab.com/Jaco-Minnaar/tfire"
keywords = ["terminal", "graphics", "fire", "doom"]
categories = ["command-line-utilities", "visualization", "games"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
termion = "1.5.6"
